// Prisma Schema File
// This file defines the database schema using Prisma

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

model User {
  id            String            @id @default(cuid())
  email         String            @unique
  name          String?
  emailVerified DateTime?
  avatarUrl     String?
  googleId      String?           @unique
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt
  workspaceMembers WorkspaceMember[]
  sessions      Session[]

  @@map("users")
}

model Workspace {
  id        String            @id @default(cuid())
  name      String
  slug      String            @unique
  createdAt DateTime          @default(now())
  updatedAt DateTime          @updatedAt
  members   WorkspaceMember[]
  roles     Role[]
  brands    Brand[]

  @@map("workspaces")
}

model WorkspaceMember {
  id          String   @id @default(cuid())
  userId      String
  workspaceId String
  role        String   // ileride enum'a çevrilebilir: 'owner' | 'admin' | 'member' vb.
  createdAt   DateTime @default(now())
  user      User      @relation(fields: [userId], references: [id])
  workspace Workspace @relation(fields: [workspaceId], references: [id])

  @@unique([userId, workspaceId])
  @@map("workspace_members")
}

model Role {
  id           String   @id @default(cuid())
  workspaceId  String?  // null ise global role, doluysa workspace-specific role
  key          String   // örn: "workspace-owner", "content-manager"
  name         String
  description  String?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  workspace       Workspace?       @relation(fields: [workspaceId], references: [id])
  rolePermissions RolePermission[]

  @@map("roles")
  @@unique([workspaceId, key]) // aynı workspace içinde aynı key iki kez olmasın, global roller için workspaceId null
}

model Permission {
  id          String   @id @default(cuid())
  key         String   @unique // örn: "workspace:settings.view"
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  rolePermissions RolePermission[]

  @@map("permissions")
}

model RolePermission {
  id           String   @id @default(cuid())
  roleId       String
  permissionId String
  createdAt    DateTime @default(now())
  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@map("role_permissions")
  @@unique([roleId, permissionId])
}

model Session {
  id           String   @id            // refresh token payload'daki `tid` ile birebir
  userId       String
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  expiresAt    DateTime
  userAgent    String?
  ipAddress    String?
  lastActiveAt DateTime @default(now())
  createdAt    DateTime @default(now())

  @@map("sessions")
  @@index([userId, expiresAt])
}

model Brand {
  id          String    @id @default(cuid())
  workspaceId String
  name        String
  slug        String
  description String?
  isActive    Boolean   @default(true)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@map("brands")
  @@unique([workspaceId, slug])
}

